--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     <title>Rosie</title>
 </head>
-
 <body>
     <header>
         <div class="row no-gutters">
@@ -50,16 +49,7 @@
             </div>
         </div>
     </header>
-    <section class="container-fluid">
-        <div class="row row-table">
-            <div class="col-md-8 bg-color-three-reasons section-column">
-                <div class="row">
-                    <div class="col">
-                        <h3 class="section-heading uppercase">About Me</h3>
-                    </div>
-                </div>
-            </div>
-        
+    <section>
 
     </section>
     <footer class="container-fluid">
