--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="row no-gutters">
                     <div class="col">
-                        <ul id="nav" class="list-inline menucontainer"></ul>
+                        <ul id="nav" class="list-inline menucontainer">
                         <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem">
                             <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i>
                                 <span>Home</span></a>
@@ -36,7 +36,7 @@
                             <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap"
                                     aria-hidden="true"></i><span>Resume</span></a>
                         </li>
-                        <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem ">
+                        <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
                             <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment"
                                     aria-hidden="true"></i><span>Contact</span></a>
                         </li>
@@ -45,7 +45,6 @@
                                     aria-hidden="true"></i><span>Download</span></a>
                         </li>
                         </ul>
-                    </ul>
                     </div>
                 </div>
             </div>
@@ -86,7 +85,7 @@
             <h5 class="uppercase general-sub">Download</h5>
             <p class="inline-block">
                 Need a printable version of my CV? Download it here.
-                <a href="#" target="_blank" class="cv-pdf">
+                <a href="assets/cv/alisonm-cv.pdf" target="_blank" class="cv-pdf">
                     <i class="fa fa-download" aria-hidden="true"></i>
                     <span class="sr-only">Download link.</span>
                 </a>
